feat: 注册接口
